--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chuck-norris-facts",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://carol-wabiszczewicz.github.io/chuck-norris-facts/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,6 +23,8 @@
     "yandex-translate-api": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +51,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
   }
