--- a/chuck-norris-gateway/package.json
+++ b/chuck-norris-gateway/package.json
@@ -2,9 +2,9 @@
   "name": "chuck-norris-gateway",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "PORT=3000 node server.js",
+    "start": "PORT=5001 node srver.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
